add socket health check instead
